# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Katana.cxl  Katana.sln  Katana.workspace  Makefile  README.md  TASKS.txt  Xenon.sln  snipped.txt
MaterialEditor/: EditorApp.cpp  EditorApp.h  EditorBase.h  EditorConsolePanel.cpp  EditorConsolePanel.h  EditorEngineInterface.cpp  EditorFrame.cpp  EditorFrame.h  EditorMaterialProperties.cpp  EditorMaterialProperties.h  EditorRenderCanvas.cpp  EditorRenderCanvas.h  EditorViewportPanel.cpp  EditorViewportPanel.h  Material Editor.rc  MaterialEditor.vcxproj  MaterialEditor.vcxproj.filters  WADFrame.cpp  (+34 more)
editor/: CMakeLists.txt  Editor.cbp  Editor.cpp  Editor.h  EditorAbout.cpp  EditorAbout.h  EditorMain.cpp  EditorMain.h  editor_main.cpp  editor_main.h
editor/FXProto/: CMakeLists.txt  main.cpp
editor/LevelEditor/: LevelEditor.cpp  LevelEditor.h  LevelEditor.vcxproj  LevelEditor.vcxproj.filters
editor/Libraries/wxWidgets-3.1.0/lib/vc140_dll/mswu/: build.cfg
editor/Libraries/wxWidgets-3.1.0/lib/vc140_dll/mswud/: build.cfg
editor/ModelViewer/: CMakeLists.txt  ModelViewer.cpp  ModelViewer.h
editor/XLevelEditor/: LevelEditor.cpp  LevelEditor.h  LevelEditor.vcxproj  LevelEditor.vcxproj.filters
editor/widgets/: FXExStatusBar.cpp  FXExStatusBar.h
engine/: .gitignore  CMakeLists.txt  Engine.cbp  Engine.depend  Engine.vcxproj  Engine.vcxproj.filters  EngineAudio.c  EngineAudio.h  EngineAudioDMA.c  EngineAudioDirectSound.c  EngineAudioDummy.c  EngineAudioMem.c  EngineAudioMix.c  EngineBase.h  EngineClass.h  EngineClient.c  EngineClient.cpp  EngineClientChase.c  EngineClientDemo.c  EngineClientInput.c  EngineClientInput.cpp  EngineClientParse.c  EngineClientTempEntity.c  EngineClientTempEntity.h  EngineClientView.c  EngineClientView.h  EngineCommon.c  EngineCommon.h  EngineConsole.c  EngineConsole.cpp  EngineConsole.h  EngineConsoleCommand.c  EngineConsoleCommand.h  EngineConsoleVariable.c  EngineConsoleVariable.h  EngineEditor.c  EngineEditor.h  EngineException.cpp  EngineException.h  EngineGame.c  (+265 more)
engine/client/: ClientMaterial.cpp  ClientParticle.cpp  ClientSprite.cpp  Sprite.cpp  XenonMesh.cpp  audio.h  audio_wav.c  camera.cpp  camera.h  client_sprite.cpp  effect_decal.cpp  effect_particle.cpp  effect_sprite.cpp  effect_sprite.h  mesh.cpp  shader_base.h  shader_water.h  shadow.cpp  texture.cpp  texture.h  video.cpp  video.h  video_brush.cpp  video_camera.cpp  video_camera.h  video_draw.cpp  video_draw.h  video_framebuffer.cpp  video_layer.c  video_light.h  video_object.cpp  video_object.h  video_sdlwindow.c  video_sky.h  video_testbed.cpp  video_viewport.cpp  video_viewport.h  viewport.cpp
engine/lib/: engine.lib
engine/lodepng/: lodepng.c  lodepng.h
engine/new/video/shaders/: shader_base.cpp
game/: CMakeLists.txt  Game.cbp  Game.depend  Game.vcxproj  Game.vcxproj.filters  Makefile  game.c  game_main.c  game_main.h  game_mode.h  game_resources.h
game/client/: client.c  client.cpp  client.h  client_effects.c  client_effects.cpp  client_effects.h  client_main.c  client_main.h  client_player.c  client_player.h  client_view.c
game/client/menu/: menu.cpp
game/server/: Entity.cpp  Entity.h  EntityAnimated.cpp  ServerEntity.cpp  monster_bot.c  server.c  server_ai.cpp  server_ai.h  server_animated.cpp  server_area.c  server_area.cpp  server_debug.c  server_debug.h  server_deco.c  server_effects.c  server_effects.h  server_ent.c  server_entity.c  server_entity.cpp  server_entity.h  server_gamemode.h  server_gib.c  server_item.c  server_item.h  server_main.c  server_main.h  server_menu.c  server_menu.h  server_misc.c  server_misc.h  server_mode.h  server_monster.c  server_monster.h  server_physics.c  server_physics.cpp  server_physics.h  server_player.c  server_player.cpp  server_player.h  server_point.c  (+9 more)
game/server/adamas/: adamas.h  adamas_blazer.c  adamas_hurler.c  adamas_player.c  monster_hurler.c  monster_roller.c
game/server/ictus/: vehicle_rover.c
game/server/openkatana/: decoration_barrel.c  item_health.c  mode_ctf.c  mode_deathmatch.c  mode_vektar.c  monster_cambot.c  monster_inmater.c  monster_lasergat.c  monster_lasergat.cpp  monster_prisoner.c  openkatana.h  weapon_axe.c  weapon_ballista.c  weapon_barrier.c  weapon_c4vizatergo.c  weapon_crossbow.c  weapon_daikatana.c  weapon_discus.c  weapon_glock.c  weapon_greekfire.c  weapon_hermes.c  weapon_ionblaster.c  weapon_ionrifle.c  weapon_kineticore.c  weapon_midas.c  weapon_pulserifle.c  weapon_shockwave.c  weapon_shotcycler6.c  weapon_sidewinder.c  weapon_trident.c  weapon_zeus.c
launcher/: .gitignore  CMakeLists.txt  Launcher.cbp  Launcher.depend  Launcher.rc  Launcher.vcxproj  Launcher.vcxproj.filters  LauncherMain.cpp  launcher.cpp  launcher_main.cpp
legacy/menu/: CMakeLists.txt  menu_hud.cpp  menu_main.cpp
level/: CMakeLists.txt  Level.cbp  Level.vcxproj  Level.vcxproj.filters  brush.c  bsp5.h  bspfile.c  bspfile.h  cmdlib.c  cmdlib.h  csg4.c  level_faces.c  level_main.c  level_tree.c  level_wad.c  light.c  light.h  light_face.c  light_trace.c  map.c  mathlib.h  solidbsp.c  vis.c  vis_sound.c  winding.c  writebsp.c
platform/: CMakeLists.txt  Platform.cbp  Platform.depend  Platform.vcxproj  Platform.vcxproj.filters  PlatformString.c  platform.c  platform_filesystem.c  platform_graphics.cpp  platform_graphics_shader.cpp  platform_image.c  platform_image.cpp  platform_image_ftx.cpp  platform_library.c  platform_log.c  platform_math.c  platform_math.cpp  platform_model.cpp  platform_model_md2.cpp  platform_model_obj.cpp  platform_model_u3d.cpp  platform_module.c  platform_net.c  platform_string.c  platform_system.h  platform_video_layer.cpp  platform_window.c
platform/include/: PlatformString.h  platform.h  platform_filesystem.h  platform_graphics.h  platform_graphics_shader.h  platform_image.h  platform_library.h  platform_log.h  platform_math.h  platform_math_legacy.h  platform_model.h  platform_model_obj.h  platform_module.h  platform_string.h  platform_system.h  platform_video_layer.h  platform_window.h
platform/lib/: platform.x64.lib  platform.x86.lib
(+261 files in other folders)
